# MasterThesis

./: .gitignore  HelpfulStuff.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
Code/: Bfv.py  Homomorph.ipynb  LWE.ipynb  ModuleBfv.py  Polynomial.py  Vis.ipynb  performance_data.csv  pyproject.toml  qp_performance.csv  test.ipynb
Code/data/: alg_depth_data.csv  dn_performance.csv
Expose/: .gitignore  Makefile  README.md  fiwthesis.cls  quellen.bib  thesis.tex
Expose/anlagen/: beispiel.tex  cd.tex  exampleCode.c
Expose/kapitel/: Abgrenzung.tex  Gliederung.tex  Problemstellung.tex  StandDerForschung.tex  VorgehensweisenUndMethoden.tex  Zeitplan.tex  Zielsetzung.tex  aufgabenstellung.tex  beispiel.tex  einleitung.tex  schluss.tex
Expose/tools/: dirtree.pl
Expose/verzeichnisse/: abkuerzungen.tex  glossar.tex  symbole.tex
Thesis/: .drone.yml  fiwthesis.cls  quellen.bib  thesis.tex
Thesis/appendix/: example-calculations.tex  lwe-calculations.tex
Thesis/chapter/: Abstract.tex  Conclusion.tex  Evaluation.tex  HomomorphicEncryption.tex  Introduction.tex  LWE.tex  MathematicalBackground.tex  PrakticalTest.tex  TaskDefinition.tex
Thesis/verzeichnisse/: glossar.tex
