[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["PascalStehling <pascal.stehling@catenion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.1.1"
yapf = "^0.40.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
nbconvert = "^7.16.2"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
