[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["PascalStehling <pascal.stehling@catenion.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
notebook = "^7.1.1"
yapf = "^0.40.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
nbconvert = "^7.16.2"
scipy = "^1.12.0"
manim = "^0.18.0"
tqdm = "^4.66.4"
ipywidgets = "^8.1.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
